--- a/amplify.yml
+++ b/amplify.yml
@@ -3,10 +3,14 @@ backend:
   phases:
     build:
       commands:
+        - nvm use 20
         - npm ci --cache .npm --prefer-offline
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
+    preBuild:
+      commands:
+        - nvm use 20
     build:
       commands:
         - npm run build
